--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -3,29 +3,37 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  margin-bottom: 100px;
 }
-
-.headerIconSection {
+.headerSection {
   width: 33%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
 }
-.headerTitleText{
-    font-size: 4vh;
+.headerTitleText {
+  font-size: 3.5vh;
+  cursor: pointer;
 }
 
 .navContainer {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   list-style-type: none;
+  justify-content: space-between;
+}
+
+.navContainer li {
+  display: flex;
+  align-items: center;
 }
 .navLiOptions {
   width: 100%;
-  padding-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .navIconsContainer {
@@ -36,7 +44,8 @@
 }
 
 .navLiIcons {
-  width: 12%;
+  width: 10%;
+  //   margin-left: 5px;
 }
 
 .navIconImg {
@@ -44,4 +53,88 @@
   margin: 10px;
   margin-top: 30px;
   cursor: pointer;
+}
+
+.storySectionMainContainer {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.storySectionContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  //min-height: 300px;
+  margin-bottom: 100px;
+}
+
+// .active {
+//   background-color: yellow;
+// }
+
+.storyOptionsContainer {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-bottom: 80px;
+}
+
+.storyOptionsContainer span:hover {
+  background-color: lavender;
+  border-radius: 10px;
+}
+
+.questionSectionContainer {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.questionImageContainer {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.questionTextContainer {
+  width: 50%;
+}
+.questionText {
+  text-align: justify;
+  line-height: 40px;
+}
+
+.questionPicture {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  aspect-ratio: 4/3;
+  mix-blend-mode: var(--card-blend-mode);
+  opacity: 0.6;
+  border-radius: 10px;
+}
+
+.buttonsFutureContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+.buttonsFutureContainer span:hover {
+  background-color: lavender;
+  border-radius: 10px;
+}
+.buttonsFuture {
+  // width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 10px;
 }
