--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -1,7 +1,7 @@
 .headerContainer {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   margin-bottom: 100px;
 }
@@ -21,7 +21,7 @@
   display: flex;
   align-items: center;
   list-style-type: none;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .navContainer li {
@@ -50,9 +50,6 @@
 
 .navIconImg {
   width: 50%;
-  margin: 10px;
-  margin-top: 30px;
-  cursor: pointer;
 }
 
 .storySectionMainContainer {
@@ -137,4 +134,22 @@
   justify-content: center;
   border: 1px solid black;
   border-radius: 10px;
+}
+
+// contact section
+
+.contactContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100px;
+}
+
+.contactItemContainer {
+  background-color: yellow;
+  width: 33%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
