--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -36,6 +36,10 @@
   align-items: center;
   width: 100%;
 }
+.active {
+  background-color: lavender;
+  border-radius: 10px;
+}
 
 .navLiOptions {
   width: 100%;
@@ -129,7 +133,7 @@
 
 .buttonsFutureContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
 }
@@ -185,22 +189,21 @@
   justify-content: space-evenly;
 }
 
-.landingPageButton:hover{
-    background-color: lavender;
+.landingPageButton:hover {
+  background-color: lavender;
 }
 
-.landingPageButton{
-    border: 1px solid black;
-    border-radius: 10px;
+.landingPageButton {
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
-.landingPictureContainer{
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.landingPictureContainer {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
-
 
 .landingTitleContainer {
   width: 30%;
@@ -208,8 +211,8 @@
   padding: 0 20px;
 }
 
-.landingHiddenTextContainer{
-   display: flex;
-   align-items: center;
-   flex-direction: column;
+.landingHiddenTextContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
