--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -19,6 +19,7 @@
 .navContainer li:hover {
   background-color: lavender;
   border-radius: 10px;
+  font-weight: bolder;
 }
 
 .navContainer {
@@ -104,6 +105,7 @@
 .storyOptionsContainer span:hover {
   background-color: lavender;
   border-radius: 10px;
+  font-weight: bolder;
 }
 
 .questionSectionContainer {
@@ -145,6 +147,7 @@
 .buttonsFutureContainer span:hover {
   background-color: lavender;
   border-radius: 10px;
+  font-weight: bolder;
 }
 .buttonsFuture {
   // width: 30%;
@@ -198,6 +201,7 @@
 
 .landingPageButton:hover {
   background-color: lavender;
+  font-weight: bolder;
 }
 
 .landingPageButton {
