--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -50,7 +50,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
 }
 
 .navIconsContainer {
@@ -259,7 +258,7 @@
   box-shadow: 5px 5px 5px 5px #888888;
   margin-bottom: 30px;
   min-height: 170px;
-  border:1px solid  black
+  border: 1px solid black;
 }
 .quizzQuestionNumber {
   width: 100%;
@@ -293,8 +292,44 @@
   margin-right: 20px;
 }
 
-.quizzScoreText{
+.quizzScoreText {
   margin: auto;
   font-size: 20px;
   font-weight: bolder;
+}
+
+// projects
+
+.projectsPageContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
+  justify-items: center;
+}
+
+.projectCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 78px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px 5px #888888;
+  border: 1px solid black;
+  padding: 10px;
+  width: 50%;
+  margin-bottom: 20px;
+}
+
+.projectCardIconsContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+// .projectCardIconContainer{
+//   width: 50%;
+// }
+
+.projectCardIcons {
+  width: 30px;
 }
