--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -1,335 +1,429 @@
-.headerContainer {
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  margin-bottom: 100px;
-}
-.headerSection {
-  width: 33%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-.headerTitleText {
-  font-size: 3.5vh;
-  cursor: pointer;
+@media screen and (min-width: 1024px) {
+  .headerContainer {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-bottom: 100px;
+  }
+  .headerSection {
+    width: 33%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .headerTitleText {
+    font-size: 3.5vh;
+    cursor: pointer;
+  }
+
+  .navContainer li:hover {
+    background-color: lavender;
+    border-radius: 10px;
+    font-weight: bolder;
+  }
+
+  .navContainer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    justify-content: space-evenly;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+
+  .navLiItems {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+  .active {
+    background-color: lavender;
+    border-radius: 10px;
+    font-weight: bolder;
+    //border: 1px solid black;
+  }
+
+  .navLiOptions {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .navIconsContainer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    justify-content: flex-end;
+  }
+
+  .navLiIcons {
+    width: 10%;
+    //   margin-left: 5px;
+  }
+
+  .navIconImg {
+    width: 50%;
+  }
+
+  .storySectionMainContainer {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .storySectionContainer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    //min-height: 300px;
+    margin-bottom: 100px;
+  }
+
+  .storyOptionsContainer {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-bottom: 80px;
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+
+  .storyOptionsContainer span:hover {
+    background-color: lavender;
+    border-radius: 10px;
+    font-weight: bolder;
+  }
+
+  .questionSectionContainer {
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .questionImageContainer {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .questionTextContainer {
+    width: 50%;
+  }
+  .questionText {
+    text-align: justify;
+    line-height: 40px;
+  }
+
+  .questionPicture {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    aspect-ratio: 4/3;
+    mix-blend-mode: var(--card-blend-mode);
+    opacity: 0.6;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+
+  .buttonsFutureContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+  }
+  .buttonsFutureContainer span:hover {
+    background-color: lavender;
+    border-radius: 10px;
+    font-weight: bolder;
+  }
+  .buttonsFuture {
+    // width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+
+  // contact section
+
+  .contactContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 100px;
+  }
+
+  .contactItemContainer {
+    background-color: yellow;
+    width: 33%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  // landing
+
+  .landingContainer {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+  .profilePicture {
+    width: 20%;
+    opacity: 0.8;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+
+  .landingPagebuttons {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-evenly;
+  }
+
+  .landingPageButton:hover {
+    background-color: lavender;
+    font-weight: bolder;
+  }
+
+  .landingPageButton {
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+
+  .landingPictureContainer {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .landingTitleContainer {
+    width: 30%;
+    text-align: justify;
+    padding: 0 20px;
+    margin-left: 20px;
+  }
+
+  .landingHiddenTextContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  // quizz
+  .quizzButton:hover {
+    background-color: lavender;
+    font-weight: bolder;
+  }
+  .quizzButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+
+  .quizzPageContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 150px;
+  }
+
+  .quizzGameContainer {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+    margin-bottom: 30px;
+    min-height: 170px;
+    border: 1px solid black;
+  }
+  .quizzQuestionNumber {
+    width: 100%;
+    font-weight: bolder;
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
+  .quizzQuestionText {
+    display: flex;
+    align-items: center;
+  }
+
+  .quizzAnswerSection {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
+  .quizzSelectButton:hover {
+    background-color: lavender;
+    font-weight: bolder;
+  }
+
+  .quizzSelectButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+    margin-right: 20px;
+  }
+
+  .quizzScoreText {
+    margin: auto;
+    font-size: 20px;
+    font-weight: bolder;
+  }
+
+  // projects
+
+  .projectsPageContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    justify-items: center;
+  }
+
+  .projectCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 78px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+    border: 1px solid black;
+    padding: 10px;
+    width: 50%;
+    margin-bottom: 20px;
+  }
+
+  .projectCardIconsContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  // .projectCardIconContainer{
+  //   width: 50%;
+  // }
+
+  .projectCardIcons {
+    width: 30px;
+  }
 }
 
-.navContainer li:hover {
-  background-color: lavender;
-  border-radius: 10px;
-  font-weight: bolder;
+// tablet size
+@media screen and (max-width: 1023px) and (min-width: 768px) {
 }
 
-.navContainer {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  list-style-type: none;
-  justify-content: space-evenly;
-  border: 1px solid black;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-}
+// phone size
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .headerContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 100px;
+  }
 
-.navLiItems {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-.active {
-  background-color: lavender;
-  border-radius: 10px;
-  font-weight: bolder;
-  //border: 1px solid black;
-}
+  .headerMobileContainer {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .headerTitleName {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45%;
+  }
 
-.navLiOptions {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .headerMobileIcon {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 45%;
+  }
 
-.navIconsContainer {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  list-style-type: none;
-  justify-content: flex-end;
-}
+  .headerSection {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    /* z-index: 2222; */
+    background: white;
+    top: 60px;
+    width: 100%;
+  }
 
-.navLiIcons {
-  width: 10%;
-  //   margin-left: 5px;
-}
+  .navContainer {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    justify-content: space-around;
+    min-height: 300px;
+    position: relative;
+    left: -20px;
+  }
 
-.navIconImg {
-  width: 50%;
-}
+  .navLiItems {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 10px;
+  }
+  .navIconsContainer {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    justify-content: space-around;
+    margin-top: 40px;
+    position: relative;
+    left: -20px;
+  }
 
-.storySectionMainContainer {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-}
+  .navLiIcons {
+    width: 10%;
+    //   margin-left: 5px;
+  }
 
-.storySectionContainer {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex-direction: column;
-  //min-height: 300px;
-  margin-bottom: 100px;
-}
+  .navIconImg {
+    width: 50%;
+  }
 
-.storyOptionsContainer {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border: 1px solid black;
-  border-radius: 10px;
-  margin-bottom: 80px;
-  box-shadow: 5px 5px 5px 5px #888888;
-}
-
-.storyOptionsContainer span:hover {
-  background-color: lavender;
-  border-radius: 10px;
-  font-weight: bolder;
-}
-
-.questionSectionContainer {
-  width: 80%;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.questionImageContainer {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-.questionTextContainer {
-  width: 50%;
-}
-.questionText {
-  text-align: justify;
-  line-height: 40px;
-}
-
-.questionPicture {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-  aspect-ratio: 4/3;
-  mix-blend-mode: var(--card-blend-mode);
-  opacity: 0.6;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-}
-
-.buttonsFutureContainer {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-}
-.buttonsFutureContainer span:hover {
-  background-color: lavender;
-  border-radius: 10px;
-  font-weight: bolder;
-}
-.buttonsFuture {
-  // width: 30%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-}
-
-// contact section
-
-.contactContainer {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 100px;
-}
-
-.contactItemContainer {
-  background-color: yellow;
-  width: 33%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-// landing
-
-.landingContainer {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-
-.profilePicture {
-  width: 20%;
-  opacity: 0.8;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-}
-
-.landingPagebuttons {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: space-evenly;
-}
-
-.landingPageButton:hover {
-  background-color: lavender;
-  font-weight: bolder;
-}
-
-.landingPageButton {
-  border: 1px solid black;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-}
-
-.landingPictureContainer {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.landingTitleContainer {
-  width: 30%;
-  text-align: justify;
-  padding: 0 20px;
-  margin-left: 20px;
-}
-
-.landingHiddenTextContainer {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-// quizz
-.quizzButton:hover {
-  background-color: lavender;
-  font-weight: bolder;
-}
-.quizzButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-}
-
-.quizzPageContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 150px;
-}
-
-.quizzGameContainer {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-  margin-bottom: 30px;
-  min-height: 170px;
-  border: 1px solid black;
-}
-.quizzQuestionNumber {
-  width: 100%;
-  font-weight: bolder;
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-.quizzQuestionText {
-  display: flex;
-  align-items: center;
-}
-
-.quizzAnswerSection {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 30px;
-}
-.quizzSelectButton:hover {
-  background-color: lavender;
-  font-weight: bolder;
-}
-
-.quizzSelectButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-  margin-right: 20px;
-}
-
-.quizzScoreText {
-  margin: auto;
-  font-size: 20px;
-  font-weight: bolder;
-}
-
-// projects
-
-.projectsPageContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 15px;
-  justify-items: center;
-}
-
-.projectCard {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 78px;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px #888888;
-  border: 1px solid black;
-  padding: 10px;
-  width: 50%;
-  margin-bottom: 20px;
-}
-
-.projectCardIconsContainer {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-}
-// .projectCardIconContainer{
-//   width: 50%;
-// }
-
-.projectCardIcons {
-  width: 30px;
+  .landingContainer img {
+    display: none;
+    align-items: flex-start;
+    justify-content: center;
+  }
 }
