--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -373,12 +373,11 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     position: absolute;
-    /* z-index: 2222; */
     background: white;
     top: 60px;
-    width: 100%;
+    height: 800px;
   }
 
   .navContainer {
@@ -422,7 +421,7 @@
   }
 
   .landingContainer img {
-    display: none;
+    display: flex;
     align-items: flex-start;
     justify-content: center;
   }
