--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -361,6 +361,7 @@
     align-items: center;
     justify-content: flex-start;
     width: 70%;
+    font-weight: bolder;
   }
 
   .headerMobileIcon {
