--- a/src/styles/generalStyles.module.scss
+++ b/src/styles/generalStyles.module.scss
@@ -565,4 +565,67 @@
     outline: none;
     border: 2px solid #fff;
   }
+
+  .quizzPageContainer {
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .quizzButtonContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .quizzButton {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+
+  .quizzGameContainer {
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+    margin-bottom: 30px;
+    min-height: 170px;
+    border: 1px solid black;
+  }
+  .quizzQuestionNumber {
+    width: 100%;
+    font-weight: bolder;
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
+  .quizzQuestionText {
+    display: flex;
+    align-items: center;
+  }
+
+  .quizzAnswerSection {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
+  .quizzSelectButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 12px;
+  }
 }
