--- a/src/styles/generalStyles.module.scss
+++ b/src/styles/generalStyles.module.scss
@@ -628,4 +628,40 @@
     border-radius: 10px;
     font-size: 12px;
   }
+
+  // projects
+
+  .projectsPageContainer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 15px;
+    justify-items: center;
+  }
+
+  .projectCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 78px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px #888888;
+    border: 1px solid black;
+    padding: 10px;
+    width: 50%;
+    margin-bottom: 20px;
+  }
+
+  .projectCardIconsContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  // .projectCardIconContainer{
+  //   width: 50%;
+  // }
+
+  .projectCardIcons {
+    width: 30px;
+  }
 }
