--- a/src/styles/generalStyles.module.scss
+++ b/src/styles/generalStyles.module.scss
@@ -590,7 +590,7 @@
   }
 
   .quizzGameContainer {
-    width: 75vw;
+    //width: 75vw;
     display: flex;
     flex-direction: column;
     align-items: center;
