--- a/src/styles/generalStyles.module.scss
+++ b/src/styles/generalStyles.module.scss
@@ -358,6 +358,35 @@
   .projectCardIcons {
     width: 30px;
   }
+
+  .formContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    height: 70vh;
+  }
+
+  .formInput {
+    padding: 10px;
+    margin: 20px;
+    width: 80%;
+    border: 2px solid #e2e2e2;
+    border-radius: 10px;
+  }
+
+  .formTextarea {
+    padding: 10px;
+    width: 80%;
+    border: 2px solid #e2e2e2;
+    border-radius: 10px;
+  }
+  .formInput:focus {
+    outline: none;
+    border: 2px solid #fff;
+  }
 }
 
 // tablet size
@@ -406,7 +435,7 @@
     height: 100vh;
   }
 
-  .navLangContainer{
+  .navLangContainer {
     display: flex;
     width: 100%;
     justify-content: space-evenly;
