--- a/src/styles/generalStyles.module.scss
+++ b/src/styles/generalStyles.module.scss
@@ -164,6 +164,12 @@
     align-items: center;
     width: 100%;
   }
+
+  .buttonFutureConta{
+    margin-left: 30px;
+    width: 25%;
+  }
+
   .buttonsFutureContainer span:hover {
     background-color: lavender;
     border-radius: 10px;
