--- a/src/styles/generalStyles.module.scss
+++ b/src/styles/generalStyles.module.scss
@@ -468,7 +468,7 @@
     justify-content: space-around;
     min-height: 300px;
     position: relative;
-    left: -20px;
+    left: -15px;
   }
 
   .navLiItems {
@@ -487,11 +487,11 @@
     justify-content: space-around;
     margin-top: 40px;
     position: relative;
-    left: -20px;
+    //left: 0;
   }
 
   .navLiIcons {
-    width: 10%;
+    width: 15%;
     cursor: pointer;
     //   margin-left: 5px;
   }
